# ChatServer

./: .gitignore  CMakeLists.txt  README.md  configure.sh  dump.rdb
include/: public.hpp
include/pb/: friend_repo_service.pb.h  user_repo_service.pb.h
include/proxy/: repo_proxy.h  tls_proxy.h
include/public/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  user.hpp  usermodel.hpp
include/server/db/: mydb.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/service/repo/: common.pb.h  friendmodel.hpp  group.hpp  group_repo_service.pb.h  groupmodel.hpp  offline_message_repo_service.pb.h  offlinemessagemodel.hpp  usermodel.hpp
mrpc/: README.md  configure.sh
mrpc/example/callee/: friendservice.cc
mrpc/test/protobuf/: main
proto/: common.proto  friend_repo_service.proto  group_repo_service.proto  offline_message_repo_service.proto  user_repo_service.proto
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/pb/repo/: common.pb.cc  friend_repo_service.pb.cc  group_repo_service.pb.cc  offline_message_repo_service.pb.cc
src/proxy/: repo_proxy.cpp  tls_proxy.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  usermodel.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
src/service/: CMakeLists.txt
src/service/chat/: main.cpp
src/service/repo/: CMakeLists.txt  common.pb.cc  friend_repo_service.cc  friendmodel.cpp  group_repo_service.pb.cc  groupmodel.cpp  main.cpp  offlinemessagemodel.cpp  user_repo_service.pb.cc  usermodel.cpp
